Complete frontend updates - Contact page improvements, navbar updates, photos reorganization, and UI enhancements

--- a/src/components/Navbar/Navbar.scss
+++ b/src/components/Navbar/Navbar.scss
@@ -1480,6 +1480,7 @@
     padding: 1rem 1.25rem 1.25rem;
     
     .search-tips {
+      display: none;
       font-size: 0.75rem;
       
       kbd {
