Add mobile-responsive Testimonials page with enhanced UX features and auto-scroll functionality

--- a/src/components/About/About.scss
+++ b/src/components/About/About.scss
@@ -261,7 +261,7 @@
 
       .floating-watch {
         position: relative;
-        animation: float 8s ease-in-out infinite;
+        // animation: float 8s ease-in-out infinite;
 
         img {
           width: 500px;
