Fix: Replace undefined $font-heading variable with $font-luxury in ProductDetail.scss - Fixed build error where $font-heading was undefined - Replaced with $font-luxury variable that is properly defined - Build now completes successfully without errors

--- a/src/components/ProductDetail/ProductDetail.scss
+++ b/src/components/ProductDetail/ProductDetail.scss
@@ -2232,7 +2232,7 @@ $font-mono: 'JetBrains Mono', 'Fira Code', monospace;
           flex: 1;
 
           h4 {
-            font-family: $font-heading;
+            font-family: $font-luxury;
             font-size: 1.1rem;
             font-weight: 600;
             color: $black;
